==> wdsll/stm32f407_Eth_Fsmc/PublicDrivers/W5500/w5500_conf.c <==
#include <stdio.h>
#include <string.h>
#include "w5500_conf.h"
#include "utility.h"
#include "w5500.h"
#include "dhcp.h"
#include "spi.h"

void reset_w5500(void)
{
//  GPIO_ResetBits(WIZ_RESET_PORT, WIZ_RESET);
//  delay_ms(10);
//  GPIO_SetBits(WIZ_RESET_PORT, WIZ_RESET);
//  delay_ms(1600);


	HAL_GPIO_WritePin(WIZ_RESET_PORT,WIZ_RESET,GPIO_PIN_RESET);
	HAL_Delay(10);
	HAL_GPIO_WritePin(WIZ_RESET_PORT,WIZ_RESET,GPIO_PIN_SET);
	HAL_Delay(1600);
}

void set_w5500_ip(void)
{
	/*复制定义的配置信息到配置结构体*/
	memcpy(ConfigMsg.mac, mac, 6);
	memcpy(ConfigMsg.lip,local_ip,4);
	memcpy(ConfigMsg.sub,subnet,4);
	memcpy(ConfigMsg.gw,gateway,4);
	memcpy(ConfigMsg.dns,dns_server,4);
	if(ip_from==IP_FROM_DEFINE)
		SEGGER_RTT_printf(0,"Use the defined IP information configuration W5500\r\n"); //使用定义的IP信息配置W5500


	/*使用DHCP获取IP参数，需调用DHCP子函数*/
	if(ip_from==IP_FROM_DHCP)
	{
		/*复制DHCP获取的配置信息到配置结构体*/
		if(dhcp_ok==1)
		{
			SEGGER_RTT_printf(0," IP from DHCP\r\n");
			memcpy(ConfigMsg.lip,DHCP_GET.lip, 4);
			memcpy(ConfigMsg.sub,DHCP_GET.sub, 4);
			memcpy(ConfigMsg.gw,DHCP_GET.gw, 4);
			memcpy(ConfigMsg.dns,DHCP_GET.dns,4);
		}
		else
		{
			SEGGER_RTT_printf(0," The DHCP subroutine did not run, or was unsuccessful\r\n");	//DHCP子程序未运行,或者不成功
			SEGGER_RTT_printf(0," Configure W5500 using the defined IP information\r\n");	//使用定义的IP信息配置W5500
		}
	}

	/*以下配置信息，根据需要选用*/
	ConfigMsg.sw_ver[0]=FW_VER_HIGH;
	ConfigMsg.sw_ver[1]=FW_VER_LOW;

	/*将IP配置信息写入W5500相应寄存器*/
	setSUBR(ConfigMsg.sub);
	setGAR(ConfigMsg.gw);
	setSIPR(ConfigMsg.lip);

	getSIPR (local_ip);
	SEGGER_RTT_printf(0," W5500 IP   : %d.%d.%d.%d\r\n", local_ip[0],local_ip[1],local_ip[2],local_ip[3]);		//IP地址
	getSUBR(subnet);
	SEGGER_RTT_printf(0," W5500 subnet : %d.%d.%d.%d\r\n", subnet[0],subnet[1],subnet[2],subnet[3]);					//子网掩码
	getGAR(gateway);
	SEGGER_RTT_printf(0," W5500 gateway     : %d.%d.%d.%d\r\n", gateway[0],gateway[1],gateway[2],gateway[3]);	//网关
}

void gpio_for_w5500_config(void)
{
  GPIO_InitTypeDef GPIO_InitStruct;

  __HAL_RCC_SPI1_CLK_ENABLE() ;
  WIZ_SPI_GPIO_ClK_ENABLE();
  WIZ_SPIx_SCS_CLK_ENABLE();
	WIZ_INT_CLK_ENABLE();
  WIZ_RESET_CLK_ENABLE();

  GPIO_InitStruct.Pin = WIZ_SPIx_SCLK_PIN|WIZ_SPIx_MOSI_PIN;
  GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
  HAL_GPIO_Init(WIZ_SPIx_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin = WIZ_SPIx_MISO_PIN;
  GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
  GPIO_InitStruct.Pull = GPIO_NOPULL;
  HAL_GPIO_Init(WIZ_SPIx_GPIO_PORT, &GPIO_InitStruct);

  HAL_GPIO_WritePin(WIZ_SPIx_SCS_PORT, WIZ_SPIx_SCS_PIN, GPIO_PIN_SET);
  GPIO_InitStruct.Pin = WIZ_SPIx_SCS_PIN;
  GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
  HAL_GPIO_Init(WIZ_SPIx_SCS_PORT, &GPIO_InitStruct);

  /* Disable the Serial Wire Jtag Debug Port SWJ-DP */
//  __HAL_AFIO_REMAP_SWJ_DISABLE();

  hspi1.Instance = WIZ_SPIx;
  hspi1.Init.Mode = SPI_MODE_MASTER;
  hspi1.Init.Direction = SPI_DIRECTION_2LINES;
  hspi1.Init.DataSize = SPI_DATASIZE_8BIT;
  hspi1.Init.CLKPolarity = SPI_POLARITY_HIGH;
  hspi1.Init.CLKPhase = SPI_PHASE_2EDGE;
  hspi1.Init.NSS = SPI_NSS_SOFT;
  hspi1.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_4;
  hspi1.Init.FirstBit = SPI_FIRSTBIT_MSB;
  hspi1.Init.TIMode = SPI_TIMODE_DISABLE;
  hspi1.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;
  hspi1.Init.CRCPolynomial = 7;
  HAL_SPI_Init(&hspi1);

  /*定义INT引脚*/
  GPIO_InitStruct.Pin = WIZ_INT_PIN;
  GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
  GPIO_InitStruct.Pull = GPIO_PULLUP;
  HAL_GPIO_Init(WIZ_SPIx_SCS_PORT, &GPIO_InitStruct);

  /*定义RESET引脚*/
  HAL_GPIO_WritePin(WIZ_RESET_PORT, WIZ_RESET_PIN, GPIO_PIN_SET);
  GPIO_InitStruct.Pin = WIZ_RESET_PIN;
  GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
  HAL_GPIO_Init(WIZ_RESET_PORT, &GPIO_InitStruct);
}

void wiz_cs(u8 val)
{
	if (val == LOW)
	{
//	  GPIO_ResetBits(WIZ_SPIx_SCS_PORT, WIZ_SPIx_SCS);
		HAL_GPIO_WritePin(WIZ_SPIx_SCS_PORT,WIZ_SPIx_SCS,GPIO_PIN_RESET);
	}
	else if (val == HIGH)
	{
//	  GPIO_SetBits(WIZ_SPIx_SCS_PORT, WIZ_SPIx_SCS);
		HAL_GPIO_WritePin(WIZ_SPIx_SCS_PORT,WIZ_SPIx_SCS,GPIO_PIN_SET);
	}
}

u8 SPI_SendByte(u8 byte)
{
  uint8_t d_read,d_send=byte;
  if(HAL_SPI_TransmitReceive(&hspi1,&d_send,&d_read,1,0xFFFFFF)!=HAL_OK)
    d_read=0XFF;

  return d_read;
}
